# rickled

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  SECURITY.md  deploy.py  pip_description.md  pyproject.toml  run_tests.py  setup.cfg  setup.py  version.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/source/: api_reference.rst  changelog.rst  cli_tools.rst  conf.py  examples.rst  index.rst  pickle_rick.rst  rickle.rst  rickled.rst  tools.rst
pickle_rick/: __init__.py
rickle/: __init__.py  __version__.py  net.py  tools.py
rickle/cli/: __init__.py  __main__.py  conv.py  obj.py  schema.py  serve.py
rickled/: __init__.py  __version__.py  cli.py  net.py  tools.py
rickled/cli/: __init__.py  __main__.py  conv.py  obj.py  schema.py  serve.py
tests/placebos/: 6D6172696F.txt  config.yaml  conv_test.json  test.csv  test_config.json  test_config.yaml  test_malicious.yaml  test_second.yaml  test_security.yaml
tests/unittest/: __init__.py  test_advanced.py  test_base_rickle.py  test_cli.py  test_net.py  test_object_rickler.py  test_rickle.py  test_schema_tool.py
