[project]
name = "rickle"
version = "1.2.2"
description = "Python tools for working with configuration files"
authors = [
    { name = "Zipfian Science", email = "about@zipfian.science" }
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml", "requests", "tomli;python_version<'3.11'", "tomli-w"
]
keywords = ['Pickle', 'Python', 'config', 'configuration', 'YAML', 'JSON', 'TOML', 'XML', 'INI', 'ENV']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
net = [
    'twisted',
    'pyopenssl'
]
xml = ['xmltodict']
dotenv = ['python-dotenv']
validators = ["py.validator"]
jsonschema = ["jsonschema[format]"]
full = [
    "py.validator",
    'python-dotenv',
    'xmltodict',
    'twisted',
    'pyopenssl',
    "jsonschema[format]"
]

[project.scripts]
rickle = "rickle.cli:main"

[project.urls]
Homepage = "https://zipfian.science/rickle.html"
Documentation = "https://zipfian.science/docs/rickle/index.html"
Repository = "https://github.com/Zipfian-Science/rickled.git"
Issues = "https://github.com/Zipfian-Science/rickled/issues"
Changelog = "https://zipfian.science/docs/rickle/changelog.html"

[tool.poetry.scripts]
unittest = 'deploy:all_unit_tests'
docs = 'deploy:build_documentation'
bumpver = 'deploy:bump_version_patch'
uploaddocs = 'deploy:upload_docs_via_ftp'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
sphinx = "7.4.7"
sphinxcontrib-napoleon = "^0.7"
sphinx-book-theme = "^1.1.3"
sphinx-copybutton = "^0.5.2"
jsonschema = "^4.23.0"
coverage = "^7.6.10"
pyopenssl = "^25.0.0"
twisted = "^24.11.0"
python-dotenv = "^1.0.1"
xmltodict = "^0.14.2"
py-validator = "^0.21.1"
myst-parser = "3.0.1"
sphinx-design = "^0.6.1"

